# f3cpp

./: .gitignore  CMakeLists.txt  README.md  license.txt
doc/doxygen/: doxygen.dox.in
doc/doxygen/pages/: Overview.txt
examples/: CMakeLists.txt  TFIM_adiabatic.ini  TFXY.ini  TFXZ.ini  TFYZ.ini  XY.ini  XZ.ini  YZ.ini  timeEvolution.hpp  timeEvolutionTFXY.cpp  timeEvolutionTFXZ.cpp  timeEvolutionTFYZ.cpp  timeEvolutionXY.cpp  timeEvolutionXZ.cpp  timeEvolutionYZ.cpp
examples/adiabstateprep/: 5q_TFIM_nsteps1200_dt0.05_ibmq_brooklyn_mitigated_magnetization_compressed_circuits.txt  5q_TFIM_nsteps1200_dt0.05_ibmq_brooklyn_mitigated_magnetization_uncompressed_circuits.txt  5q_TFIM_nsteps240_dt0.25_ibmq_brooklyn_mitigated_magnetization_compressed_circuits.txt  5q_TFIM_nsteps240_dt0.25_ibmq_brooklyn_mitigated_magnetization_uncompressed_circuits.txt  ASP_w_compressed_circuits.ipynb  TFIM_adiabatic_nsteps1200.ini  TFIM_adiabatic_nsteps240.ini
include/f3c/: SquareCircuit.hpp  TriangleCircuit.hpp  concepts.hpp  parameters.hpp  qasm.hpp  turnover.hpp  turnoverSU2.hpp  util.hpp
include/f3c/io/: INIFile.hpp  param.hpp
include/f3c/qgates/: RotationTFXY.hpp  RotationTFXYMatrix.hpp  RotationTFXZ.hpp  RotationTFYZ.hpp  RotationXY.hpp  RotationXZ.hpp  RotationYZ.hpp  TFTwoAxesQRotationGate2.hpp  TwoAxesQRotationGate2.hpp  functors.hpp
python/: CMakeLists.txt  timeEvolutionTFXY.py.in  timeEvolutionTFXZ.py.in  timeEvolutionTFYZ.py.in  timeEvolutionXY.py.in  timeEvolutionXZ.py.in  timeEvolutionYZ.py.in
src/: CMakeLists.txt
src/io/: INIFile.cpp
test/: CMakeLists.txt  SquareCircuit.cpp  TriangleCircuit.cpp  concepts.cpp  mergeTimestep.cpp  mergeTimesteps.cpp  square2triangle.cpp  triangle2square.cpp  turnover.cpp  turnoverSU2.cpp  util.cpp
test/qgates/: RotationTFXY.cpp  RotationTFXYMatrix.cpp  RotationTFXZ.cpp  RotationTFYZ.cpp  RotationXY.cpp  RotationXZ.cpp  RotationYZ.cpp
